--- a/style.css
+++ b/style.css
@@ -49,6 +49,9 @@
 h1 {
   margin-bottom: 13px;
 }
+#result{
+  background-color: #151921;
+}
 .details{
   border: 2px solid #636973;
   background-color: #151921;
@@ -62,17 +65,16 @@ h1 {
   border-radius: 8px;
 }
 .up{
-  /* border: 1px solid greenyellow; */
   width: 64%;
   height: 48%;
   display: flex;
   flex-wrap: wrap;
   align-content:baseline;
+  background-color: transparent;
 }
 .img-profil {
-  height: 7rem;
-  width: 7rem;
-  /* border: 2px solid tomato; */
+  height: 112px;
+  width: 112px;
   border-radius: 100px;
   position: relative;
   right: 116px;
@@ -81,25 +83,23 @@ h1 {
   position: relative;
   top: -11px;
   right: 100px;
-  background: transparent;
+  background-color: transparent;
 }
 .login{
-  position: absolute;
-  top: 391px;
-  left: 469px;
+  /* position: relative; */
+  top: -83px;
+  right: -14px;
   color: #5959c1;
-  background: transparent;
+  background-color: transparent;
 }
 .up p {
-  max-width: 100%;
-  /* border: 1px solid red; */
-
+  max-width: 80%;
+  background-color: transparent;
 }
 .follow{
   border: 1px solid white;
   display: flex;
   justify-content: space-around;
-  /* flex-direction: column; */
   width: 64%;
 }
 .other-info{
