--- a/style.css
+++ b/style.css
@@ -54,56 +54,64 @@ h1 {
 }
 .details{
   border: 2px solid #636973;
-  background-color: #151921;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  height: 30rem;
+  height: 23rem;
   width: 43rem;
   margin-top: 3rem;
   border-radius: 8px;
+  position: relative;
 }
 .up{
   width: 64%;
-  height: 48%;
+  height: 50%;
   display: flex;
   flex-wrap: wrap;
-  align-content:baseline;
+  align-content: space-around;
   background-color: transparent;
+
 }
 .img-profil {
-  height: 112px;
-  width: 112px;
-  border-radius: 100px;
-  position: relative;
-  right: 116px;
+    height: 100px;
+    width: 100px;
+    border-radius: 100px;
+    position: absolute;
+    right: 572px;
+    border: 1px solid #484848;
 }
 .name{
-  position: relative;
-  top: -11px;
-  right: 100px;
   background-color: transparent;
 }
 .login{
-  /* position: relative; */
-  top: -83px;
-  right: -14px;
+  position: absolute;
+  top: 77px;
+  right: 321px;
   color: #5959c1;
   background-color: transparent;
+  width: 35%;
+  font-size: smaller;
 }
 .up p {
-  max-width: 80%;
   background-color: transparent;
 }
 .follow{
-  border: 1px solid white;
+  border: 1px solid #6a6e76;
+  border-radius: 8px;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: center;
   width: 64%;
+  height: 20%;
+}
+.follow span {
+  display: block;
+  text-align: center;
 }
 .other-info{
-  border : 1px solid yellow;
+  background-color: transparent;
 }
 li{
   list-style: none;
